--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
           </h2>
           <div class="hero-button-third-flex">
             <div class="hero-button-flex">
-              <button class="hero-first-button" type="button">Buy now</button>
+              <button class="hero-first-button" type="button" data-modal-open>
+                Buy now
+              </button>
               <button class="hero-second-button" type="button">
                 How it’s made
               </button>
